--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,8 @@
         "sourceType": "module"
     },
     "rules": {
-        "semi": [2, "always"]
+        "semi": [2, "always"],
+        "space-before-function-paren": ["error", "never"],
+        "indent": ["error", 4]
     }
 }
